<resources>
    <string name="app_name">Vocabulary Trainer</string>
    <string name="nextbtn_string">Next</string>
    <string name="lang1">Lang1</string>
    <string name="lang2">Lang2</string>
    <string name="nextbtn_string1">Start</string>
    <string name="showbtn_string">Show</string>
    <string name="settings_string">Settings</string>
    <string name="langdir_string">Language Direction</string>
    <string name="wordtype_string">Wordtype</string>
    <string name="unit_string">Unit</string>
    <string name="arrow_string">-></string>
    <string name="quit_string">Quit</string>
    <string name="avoid_error_hint">This widget may be too small to be read</string>
    </resources>